fixed some spacing

--- a/style.css
+++ b/style.css
@@ -51,7 +51,7 @@ body {
   }
 
 .card {
-  width: 70%;
+  width: 71%;
   border-color: #0B274A;
   border-width: 3px;
   border-radius: 8px;
